--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,11 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="btnBack" Content="◀" Click="btnBack_Click" HorizontalAlignment="Left" Margin="5,2,0,0" VerticalAlignment="Top" Width="25" Height="25"/>
-        <Button x:Name="btnForward" Content="▶" Click="btnForward_Click" HorizontalAlignment="Left" Margin="50,2,0,0" VerticalAlignment="Top" Width="25" Height="25"/>
-        <Button x:Name="btnOpen" Content="Open" Click="btnOpen_Click" HorizontalAlignment="Right" Margin="0,2,10,0" VerticalAlignment="Top" Width="35" Height="25"/>
-        <Label Content="Path:" HorizontalAlignment="Left" Margin="95,2,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtPath" HorizontalAlignment="Stretch" Margin="135,6,55,0" TextWrapping="Wrap" Text="C:\" VerticalAlignment="Top" />
+        <Button x:Name="btnBack" Content="◀" Click="btnBack_Click" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="25" Height="25" Background="White" BorderBrush="White" FontSize="16"/>
+        <Button x:Name="btnForward" Content="▶" Click="btnForward_Click" HorizontalAlignment="Left" Margin="45,0,0,0" VerticalAlignment="Top" Width="25" Height="25" Background="White" Foreground="Black" BorderBrush="White" FontSize="16"/>
+        <Button x:Name="btnOpen" Content="Open" Click="btnOpen_Click" HorizontalAlignment="Right" Margin="0,2,10,0" VerticalAlignment="Top" Width="35" Height="25" BorderBrush="White" Background="White"/>
+        <TextBox x:Name="txtPath" Margin="95,6,60,0" TextWrapping="Wrap" Text="C:\" VerticalAlignment="Top" />
         <WebBrowser x:Name="webBrowser" Margin="0,30,0,0" Source="C:\"/>
     </Grid>
 </Window>
